hphp/hack/test/typecheck/reactive/test_method_call.php.like_types.exp
File "test_method_call.php", line 25, characters 3-14:
  ~<expr#1> as Something
File "test_method_call.php", line 14, characters 16-24:
Reactive functions can only call other reactive functions. (Typing[4200])
  File "test_method_call.php", line 4, characters 19-29:
  This function is normal.
